2006-09-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/browse_story_test.rb: Fix

	* donrails/app/views/notes/default/show_title.rhtml: moved into the default folder.

	* donrails/app/views/notes/MT/show_title.rhtml: added a MovableType style.
	* donrails/app/controllers/notes_controller.rb (NotesController::show_title): Fix for apply MT style.

2006-09-22  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/article_test.rb (ArticleTest::test_renew_mtime): Fix to apply ruby1.8.5.

2006-09-22  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/layouts/MT/notes.rhtml: use RDF_TITLE.

	* donrails/app/controllers/notes_controller.rb (NotesController):
	include ApplicationHelper into self for a workaround on webrick.

	* donrails/app/views/shared/default/pagelink.rhtml: moved into
	the default folder.

	* donrails/public/stylesheets/styles-site.css: added.

	* donrails/public/stylesheets/base-weblog.css: added.

	* donrails/app/views/notes/default/show_enrollment.rhtml: 
	* donrails/app/views/notes/default/noteslist.rhtml: moved into
	the default folder.

	* donrails/app/views/notes/MT/noteslist.rhtml: added a MovableType
	compatible layout.

	* donrails/app/views/notes/MT/show_enrollment.rhtml: likewise.

	* donrails/app/views/shared/default/title-articles2no.rhtml: 
	* donrails/app/views/shared/default/title-articles2.rhtml: 
	* donrails/app/views/shared/default/title-articles.rhtml: 
	* donrails/app/views/shared/default/show_direct.rhtml: 
	* donrails/app/views/shared/default/search.rhtml: 
	* donrails/app/views/shared/default/pagelink-j.rhtml: 
	* donrails/app/views/shared/default/nextlink3.rhtml: 
	* donrails/app/views/shared/default/linktitle.rhtml: 
	* donrails/app/views/shared/default/comment2.rhtml: 
	* donrails/app/views/shared/default/comment-enrollment.rhtml: 
	* donrails/app/views/shared/default/category_title_list.rhtml: 
	* donrails/app/views/shared/default/category_select.rhtml: 