@@ -36,7 +36,7 @@
 <h3>表示例</h3>
 <div class="recenttitle">
 <a name="recent">[最近のtopics]</a>
-<%= render ("shared/title-articles2no", "pages" => @recent_articles) %>
+<%= render("shared/title-articles2no", "pages" => @recent_articles) %>
 </div>
 
 
